# hawktracer-integration-tests

./: README.md  execute_tests.py  install.sh  run_tests.sh
apps/: CMakeLists.txt  hawktracer.cmake  scoped_test_initializer.cpp  scoped_test_initializer.hpp  string_tracepoints_no_mapping_single_thread.cpp  string_tracepoints_opt_mapping_mt.cpp  test_helper.hpp
snapshots/: string_tracepoints_no_mapping_single_thread.json  string_tracepoints_opt_mapping_mt.json
